# openbox-langgraph-sdk-python-test

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pr-governance.yml  pr-quality.yml  pr-security.yml  publish.yml
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
openbox_langgraph/: __init__.py  client.py  config.py  db_governance_hooks.py  errors.py  file_governance_hooks.py  hitl.py  hook_governance.py  http_governance_hooks.py  langgraph_handler.py  otel_setup.py  span_processor.py  tracing.py  types.py  verdict_handler.py
test-agent/: .env.example  README.md  SETUP.md  agent.py  pyproject.toml
tests/: test_contextvars_propagation.py  test_governance_changes.py  test_telemetry_payload.py
