[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbox-langgraph-sdk-python"
version = "0.1.0"
description = "OpenBox governance and observability SDK for LangGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-urllib3>=0.41b0",
    "opentelemetry-instrumentation-urllib>=0.41b0",
    "opentelemetry-instrumentation-sqlite3>=0.41b0",
    "opentelemetry-instrumentation-psycopg2>=0.41b0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0",
    "opentelemetry-instrumentation-mysql>=0.41b0",
    "opentelemetry-instrumentation-pymysql>=0.41b0",
    "opentelemetry-instrumentation-pymongo>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-urllib3>=0.41b0",
    "opentelemetry-instrumentation-urllib>=0.41b0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["openbox_langgraph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
